Little fix on admin toolbar z-index.

--- a/css/mobirise_in_drupal.css
+++ b/css/mobirise_in_drupal.css
@@ -1,4 +1,4 @@
 .toolbar-bar {
-  z-index: 2000;
+  z-index: 2000!important;
   position: relative;
 }
